; ModuleID = '/home/carl/AnghaBench/redis/src/extr_debug.c__serverAssertWithInfo.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_debug.c__serverAssertWithInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_serverAssertWithInfo(i32* %0, i32* %1, i8* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %5
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @_serverAssertPrintClientInfo(i32* %14)
  br label %16

16:                                               ; preds = %13, %5
  %17 = load i32*, i32** %7, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %16
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @_serverAssertPrintObject(i32* %20)
  br label %22

22:                                               ; preds = %19, %16
  %23 = load i8*, i8** %8, align 8
  %24 = load i8*, i8** %9, align 8
  %25 = load i32, i32* %10, align 4
  %26 = call i32 @_serverAssert(i8* %23, i8* %24, i32 %25)
  ret void
}

declare dso_local i32 @_serverAssertPrintClientInfo(i32*) #1

declare dso_local i32 @_serverAssertPrintObject(i32*) #1

declare dso_local i32 @_serverAssert(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
